# sfml-project-template

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/: FUNDING.yml
.github/workflows/: build-release.yml  build.yml
include/: Version.hpp
src/: main.cpp
